# leanSpec

./: .codespell-ignore-words.txt  .dockerignore  .gitignore  BOOK_PLAN.md  CLAUDE.md  CONTRIBUTING.md  DOCKER_QUICKSTART.md  Dockerfile  Justfile  README.md  RELEASING.md  SERIALIZATION_COMPATIBILITY.md  VERSIONS.md  mkdocs.yml  pyproject.toml  pytest-fill.ini  tox.ini  transport_layer_section.tex  vulture_whitelist.py
.claude/: hooks.json  ralph-loop.local.md  settings.json
.claude/agents/: code-tester.md  consensus-researcher.md  doc-writer.md  py-architect.md
.claude/hooks/: intercept-legacy-python.sh
.claude/rules/: code-style.md  documentation.md  ssz-patterns.md  test-framework.md  testing-style.md  workflow.md
.claude/skills/: consensus-testing.md
.claude/skills/audit/: SKILL.md
.claude/skills/checks/: SKILL.md
.claude/skills/client-test/: SKILL.md
.claude/skills/doc/: SKILL.md
.claude/skills/fill/: SKILL.md
.claude/skills/fix/: SKILL.md
.claude/skills/review/: SKILL.md
.claude/skills/spec-diff/: SKILL.md
.claude/skills/test/: SKILL.md
.claude/skills/workflows/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  docker.yml  generate-keys.yml  interop-tests.yml  prod-vectors.yml
docs/: index.md
docs/book/: chapter4_block_processing.tex  main.tex  preamble.tex
docs/client/: chain.md  containers.md  forkchoice.md  networking.md  validator.md
scripts/: pregenerate_keys.py  run_leanspec.sh  run_ream.sh  test_interop.sh
src/lean_spec/: __init__.py  __main__.py  base.py  config.py  log.py
src/lean_spec/cli/: __init__.py  args.py  bootstrap.py  main.py  run.py
src/lean_spec/client/: nodes.yaml  validators.yaml
src/lean_spec/forks/: __init__.py  protocol.py  registry.py  runner.py
src/lean_spec/forks/devnet4/: __init__.py  spec.py  state.py  store.py
src/lean_spec/forks/devnet5/: __init__.py  spec.py
src/lean_spec/forks/lstar/: __init__.py  aggregation_select.py  spec.py  store.py
src/lean_spec/node/: __init__.py  anchor.py  genesis.py  node.py
src/lean_spec/node/api/: __init__.py  aggregator_controller.py  context.py  handlers.py  responses.py  routes.py  server.py
src/lean_spec/node/chain/: __init__.py  clock.py  config.py  service.py
src/lean_spec/node/genesis/: __init__.py  config.py
src/lean_spec/node/metrics/: __init__.py  registry.py  spec_observer.py
src/lean_spec/node/networking/: __init__.py  config.py  peer.py  types.py  varint.py
src/lean_spec/node/observability/: __init__.py  observer.py
src/lean_spec/node/snappy/: __init__.py  compress.py  constants.py  decompress.py  encoding.py  framing.py
src/lean_spec/node/storage/: __init__.py  database.py  exceptions.py  namespaces.py  sqlite.py
src/lean_spec/node/sync/: __init__.py  backfill_sync.py  block_cache.py  checkpoint_sync.py  config.py  head_sync.py  peer_manager.py  service.py  states.py
src/lean_spec/node/validator/: __init__.py  constants.py  registry.py  service.py
src/lean_spec/snappy/: __init__.py  compress.py  constants.py  decompress.py  encoding.py  framing.py
src/lean_spec/spec/: __init__.py
src/lean_spec/spec/crypto/: __init__.py  koalabear.py  merkleization.py  poseidon.py
src/lean_spec/spec/forks/: __init__.py  protocol.py  registry.py
src/lean_spec/spec/observability/: __init__.py  (+1 more)
src/lean_spec/subspecs/: __init__.py
src/lean_spec/types/: __init__.py  aggregation.py  base.py  basispt.py  bitfields.py  boolean.py  byte.py  byte_arrays.py  checkpoint.py  collections.py  constants.py  container.py  exceptions.py  participation.py  rlp.py  slot.py  ssz_base.py  uint.py  uint64.py  union.py  validator.py
tests/: __init__.py  conftest.py  test_base.py
tests/api/: __init__.py  conftest.py  test_finalized_state.py  test_health.py  test_justified_checkpoint.py
tests/api/endpoints/: __init__.py  test_aggregator.py  test_checkpoints.py  test_fork_choice.py  test_health.py  test_states.py  test_unknown_routes.py
tests/cli/: test_bootstrap.py  test_main.py
tests/integration/: __init__.py
tests/integration/networking/: __init__.py
tests/interop/: __init__.py  conftest.py  test_attestation_pipeline.py  test_block_pipeline.py  test_consensus_lifecycle.py  test_justification.py  test_late_joiner.py  test_multi_node.py
tests/interop/helpers/: __init__.py  assertions.py  diagnostics.py  node_runner.py  port_allocator.py  topology.py
tests/lean_spec/: conftest.py  test_base.py  test_cli.py  test_leanspec.py
tests/lean_spec/cli/: __init__.py  test_args.py  test_bootstrap.py  test_run.py
tests/lean_spec/forks/: test_fork_protocol.py  test_lstar_spec_delegators.py
tests/lean_spec/helpers/: __init__.py  builders.py  mocks.py
tests/lean_spec/node/: conftest.py  test_anchor.py  test_node.py
tests/lean_spec/snappy/: test_framing.py  test_snappy.py
tests/lean_spec/subspecs/: conftest.py
tests/lean_spec/types/: test_base.py  test_bitfields.py  test_boolean.py  test_byte_arrays.py  test_checkpoint.py  test_collections.py  test_container.py  test_participation.py  test_rlp.py  test_ssz_base.py  test_uint.py  test_union.py  test_validator.py  test_validator_utils.py
tests/node/: test_anchor.py  test_genesis.py  test_node.py
tests/node/api/: conftest.py  test_aggregator_controller.py  test_server.py
tests/node/chain/: test_clock.py  test_service.py
tests/node/genesis/: __init__.py  test_config.py
tests/node/networking/: test_peer.py  test_types.py
tests/node/snappy/: test_decompress.py  test_encoding.py
tests/node/storage/: test_exceptions.py  test_sqlite.py
tests/node/sync/: conftest.py  test_backfill_sync.py  test_block_cache.py  test_checkpoint_sync.py  test_head_sync.py  test_peer_manager.py  test_service.py  test_states.py
tests/node/validator/: test_registry.py  test_service.py
tests/spec/crypto/: test_koalabear.py  test_merkleization.py  test_poseidon.py
tests/spec/forks/: test_registry.py
tests/spec/observability/: test_observer.py
tests/spec/ssz/: test_bitfields.py  test_boolean.py  test_byte_arrays.py  test_collections.py  test_exceptions.py  test_uint.py
(+893 files in other folders)
