[build-system]
requires = ["hatchling>=1.25.0,<2"]
build-backend = "hatchling.build"

[project]
name = "lean-spec"
version = "0.0.1"
description = "Lean Ethereum protocol specifications"
readme = "README.md"
authors = [
    { name = "Ethereum Foundation", email = "thomas.coratger@ethereum.org" },
]
keywords = [
    "lean",
    "beam",
    "ethereum",
    "specifications",
    "protocol",
    "consensus",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.12"
dependencies = ["pydantic>=2.9.2,<3", "typing-extensions>=4.4"]

[project.license]
file = "LICENSE"

[project.optional-dependencies]
test = ["pytest>=8.3.3,<9", "pytest-cov>=6.0.0,<7", "pytest-xdist>=3.6.1,<4", "hypothesis>=6.138.14"]
lint = ["ruff>=0.11.8,<1"]
typecheck = ["mypy>=1.15.0,<1.16"]
docs = [
    "mkdocs>=1.6.1,<2",
    "mkdocs-material>=9.5.45,<10",
    "mkdocstrings[python]>=0.27.0,<1",
    "codespell>=2.4.1,<3",
    "pyspelling>=2.8.2,<3",
]
dev = ["lean-spec[test,lint,typecheck,docs]", "tox>=4.23.0,<5"]
mdformat = [
    "mdformat-gfm-alerts==2.0.0",
    "mdformat-gfm==0.4.1",
    "mdformat-ruff==0.1.3",
    "mdformat-toc==0.3.0",
    "mdformat==0.7.22",
]

[project.urls]
Homepage = "https://github.com/leanEthereum/lean-spec"
Source = "https://github.com/leanEthereum/lean-spec"
Issues = "https://github.com/leanEthereum/lean-spec/issues"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
exclude = [".*", "tests/", "docs/"]

[tool.hatch.build.targets.wheel]
packages = ["src/lean_spec"]

[tool.ruff]
line-length = 100

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["E", "F", "B", "W", "I", "A", "N", "D", "C"]
fixable = ["I", "B", "E", "F", "W", "D", "C"]
ignore = ["D205", "D203", "D212", "D415", "C901", "A005", "C420"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
force-single-line = false
known-first-party = ["lean_spec"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D", "F401", "F403"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
strict = true
warn_return_any = true
warn_unused_configs = true
no_implicit_reexport = true
namespace_packages = false
explicit_package_bases = false

[tool.pytest.ini_options]
minversion = "8.3.3"
testpaths = ["tests"]
python_files = "test_*.py"
pythonpath = ["."]
addopts = [
    "-ra",
    "--strict-markers",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-branch",
]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.mdformat]
number = true
wrap = 80

[tool.uv]
dev-dependencies = [
    "ipython>=8.31.0,<9",
    "ipdb>=0.13",
    "tomli-w>=1.0.0",
    "build>=1.2.0,<2",
    "twine>=5.1.0,<6",
]
